commit modibe design countries section

--- a/maryam-s11/index.html
+++ b/maryam-s11/index.html
@@ -39,23 +39,44 @@
     </section>
 
     <section id="countries">
-      <h1>کفش ملی در هر گوشه‌ای از جهان در دسترس است</h1>
-      <ul class="row">
-        <li>
-          <img src="./assets/images/china-outline 1.png" alt="" />
-          <p>چین</p>
+      <h2>کفش ملی در هر گوشه‌ای از جهان در دسترس است</h2>
+
+      <ul class="row1">
+        <li class="col">
+          <div class="item">
+            <div class="item-img">
+              <img class="foo" src="./assets/images/china-outline 1.svg" alt="" />
+              <img class="bar" src="./assets/images/china-color 2.png" alt="" />
+            </div>
+            <p>چین</p>
+          </div>
         </li>
-        <li>
-          <img src="./assets/images/italy-outline 1.svg" alt=""  />
-          <p>ایتالیا</p>
+        <li class="col">
+          <div class="item">
+            <div class="item-img">
+              <img class="foo" src="./assets/images/italy-outline 1.svg" alt="" />
+              <img class="bar" src="./assets/images/italy-color 1.png" alt="" />
+            </div>
+            <p>ایتالیا</p>
+          </div>
         </li>
-        <li>
-          <img src="./assets/images/usa-outline 1.svg" alt="" />
-          <p>آمریکا</p>
+        <li class="col">
+          <div class="item">
+            <div class="item-img">
+              <img class="foo" src="./assets/images/usa-outline 1.svg" alt="" />
+              <img class="bar" src="./assets/images/usa-color 1.png" alt="" />
+            </div>
+            <p>آمریکا</p>
+          </div>
         </li>
-        <li>
-          <img src="./assets/images/uk-outline 1.svg" alt=""  />
-          <p>انگلستان</p>
+        <li class="col">
+          <div class="item">
+            <div class="item-img">
+              <img class="foo" src="./assets/images/uk-outline 1.svg" alt="" />
+              <img class="bar" src="./assets/images/uk-color 2.png" alt="" />
+            </div>
+            <p>انگلستان</p>
+          </div>
         </li>
       </ul>
     </section>
