--- a/maryam-s11/index.html
+++ b/maryam-s11/index.html
@@ -29,9 +29,10 @@
       <p>صدها نفر کارگر زحمتکش تحت نظر متتخصصین کار آزموده ایرانی و خارجی شبانه‌روز میکوشند محصول کارخانه کفش ملی را
         زیباتر، بادوامتر و ارزانتر از هر کفشی بشما تقدیم دارند.</p>
 
-      <div class="row contact">
-        <a class="contact-us">تماس با خدمات مشتریان</a>
-        <a class="online-order">
+      <!-- <div class="row contact"> -->
+      <div class="contact">
+        <a class="contact-us" href="#" title="تماس با خدمات مشتریان">تماس با خدمات مشتریان</a>
+        <a class="online-order" href="#" title="آنلاین سفارش بده">
           <img src="./assets/images/online-order.svg" alt="" width="16px" height="16px" />
           آنلاین سفارش بده
         </a>
@@ -39,46 +40,86 @@
     </section>
 
     <section id="countries">
-      <h2>کفش ملی در هر گوشه‌ای از جهان در دسترس است</h2>
+      <p>کفش ملی در هر گوشه‌ای از جهان در دسترس است</p>
 
-      <ul class="row1">
-        <li class="col">
+      <ul class="row">
+        <li>
           <div class="item">
             <div class="item-img">
-              <img class="foo" src="./assets/images/china-outline 1.svg" alt="" />
-              <img class="bar" src="./assets/images/china-color 2.png" alt="" />
+              <img class="outline" src="./assets/images/china-outline 1.svg" alt="" />
+              <img class="color" src="./assets/images/china-color 2.png" alt="" />
             </div>
             <p>چین</p>
           </div>
         </li>
-        <li class="col">
+        <li>
           <div class="item">
             <div class="item-img">
-              <img class="foo" src="./assets/images/italy-outline 1.svg" alt="" />
-              <img class="bar" src="./assets/images/italy-color 1.png" alt="" />
+              <img class="outline" src="./assets/images/italy-outline 1.svg" alt="" />
+              <img class="color" src="./assets/images/italy-color 1.png" alt="" />
             </div>
             <p>ایتالیا</p>
           </div>
         </li>
-        <li class="col">
+        <li>
           <div class="item">
             <div class="item-img">
-              <img class="foo" src="./assets/images/usa-outline 1.svg" alt="" />
-              <img class="bar" src="./assets/images/usa-color 1.png" alt="" />
+              <img class="outline" src="./assets/images/usa-outline 1.svg" alt="" />
+              <img class="color" src="./assets/images/usa-color 1.png" alt="" />
             </div>
             <p>آمریکا</p>
           </div>
         </li>
-        <li class="col">
+        <li>
           <div class="item">
             <div class="item-img">
-              <img class="foo" src="./assets/images/uk-outline 1.svg" alt="" />
-              <img class="bar" src="./assets/images/uk-color 2.png" alt="" />
+              <img class="outline" src="./assets/images/uk-outline 1.svg" alt="" />
+              <img class="color" src="./assets/images/uk-color 2.png" alt="" />
             </div>
             <p>انگلستان</p>
           </div>
         </li>
       </ul>
+    </section>
+
+
+    <section id="products">
+      <h2>پیشنهادهای ویژه</h2>
+      <p>انواع کفش رسمی مردانه کفی طبی، چرم طبیعی در رنگ های مشکی، قهوه ای و عسلی با سایزبندی متنوع مناسب فضاهای اداری
+      </p>
+      <ul>
+        <li>
+          <div class="item">
+            <img class="bar" src="./assets/images/shoes1.png" alt="" />
+            <p class="title">کفش رسمی بیرشاد بی بند</p>
+            <p class="dessc">کفش رسمی مردانه</p>
+          </div>
+        </li>
+        <li>
+          <div class="item">
+            <img class="bar" src="./assets/images/shoes2.png" alt="" />
+            <p class="title">کفش روزمره مردانه راسو بی بند</p>
+            <p class="dessc">کفش روزمره مردانه</p>
+          </div>
+        </li>
+        <li>
+          <div class="item">
+            <img class="bar" src="./assets/images/shoes3.png" alt="" />
+            <p class="title">کفش رسمی بیرشاد بی بند</p>
+            <p class="dessc">کفش رسمی مردانه</p>
+          </div>
+        </li>
+        <li>
+          <div class="item">
+            <img class="bar" src="./assets/images/shoes4.png" alt="" />
+            <p class="title">کفش روزمره مردانه راسو بی بند</p>
+            <p class="dessc">کفش روزمره مردانه</p>
+          </div>
+        </li>
+      </ul>
+
+      <a class="show-all" href="#" title="مشاهده‌ی همه محصولات">مشاهده‌ی همه محصولات</a>
+
     </section>
   </div>
 
