commit desktop design all section

--- a/maryam-s11/index.html
+++ b/maryam-s11/index.html
@@ -10,32 +10,36 @@
 <body>
   <header>
     <div class="container">
-      <img src="./assets/images/Logo.png" alt="" width="" height="" />
+      <img src="./assets/images/Logo.png" alt="" class="mob-img" />
+      <img src="./assets/images/Logo-d.png" alt="" class="dsc-img" />
     </div>
   </header>
   <div class="container">
 
     <section id="hero">
-      <div class="row customers">
-        <img src="./assets/images/usa.png" alt="" class="customer1-img1" width="24px" height="24px" />
-        <img src="./assets/images/italy.png" alt="" class="customer1-img2" width="24px" height="24px" />
-        <img src="./assets/images/England.png" alt="" class="customer1-img3" width="24px" height="24px" />
-        <img src="./assets/images/chin.png" alt="" class="customer1-img4" width="24px" height="24px" />
-        <span class="customer-count">۹۱,۸۵۳,۵۴۲</span>
-        <span class="customer-txt">مشتری راضی</span>
-      </div>
-      <h1>فقط به علامت فیل اطمینان داشته باشید</h1>
+      <img src="./assets/images/shoes.png" alt="" class="shoes" />
+      <div class="content">
+        <div class="row customers">
+          <img src="./assets/images/Logo-d.png" alt="" class="customer1-img1" width="24px" height="24px" />
+          <img src="./assets/images/Logo-d.png" alt="" class="customer1-img2" width="24px" height="24px" />
+          <img src="./assets/images/Logo-d.png" alt="" class="customer1-img3" width="24px" height="24px" />
+          <img src="./assets/images/Logo-d.png" alt="" class="customer1-img4" width="24px" height="24px" />
+          <span class="customer-count">۹۱,۸۵۳,۵۴۲</span>
+          <span class="customer-txt">مشتری راضی</span>
+        </div>
+        <h1>فقط به علامت فیل اطمینان داشته باشید</h1>
 
-      <p>صدها نفر کارگر زحمتکش تحت نظر متتخصصین کار آزموده ایرانی و خارجی شبانه‌روز میکوشند محصول کارخانه کفش ملی را
-        زیباتر، بادوامتر و ارزانتر از هر کفشی بشما تقدیم دارند.</p>
+        <p>صدها نفر کارگر زحمتکش تحت نظر متتخصصین کار آزموده ایرانی و خارجی شبانه‌روز میکوشند محصول کارخانه کفش ملی را
+          زیباتر، بادوامتر و ارزانتر از هر کفشی بشما تقدیم دارند.</p>
 
-      <!-- <div class="row contact"> -->
-      <div class="contact">
-        <a class="contact-us" href="#" title="تماس با خدمات مشتریان">تماس با خدمات مشتریان</a>
-        <a class="online-order" href="#" title="آنلاین سفارش بده">
-          <img src="./assets/images/online-order.svg" alt="" width="16px" height="16px" />
-          آنلاین سفارش بده
-        </a>
+        <!-- <div class="row contact"> -->
+        <div class="contact">
+          <a class="contact-us" href="#" title="تماس با خدمات مشتریان">تماس با خدمات مشتریان</a>
+          <a class="online-order" href="#" title="آنلاین سفارش بده">
+            <img src="./assets/images/online-order.svg" alt="" width="16px" height="16px" />
+            آنلاین سفارش بده
+          </a>
+        </div>
       </div>
     </section>
 
@@ -85,37 +89,75 @@
 
     <section id="products">
       <h2>پیشنهادهای ویژه</h2>
-      <p>انواع کفش رسمی مردانه کفی طبی، چرم طبیعی در رنگ های مشکی، قهوه ای و عسلی با سایزبندی متنوع مناسب فضاهای اداری
-      </p>
+      <span>انواع کفش رسمی مردانه کفی طبی، چرم طبیعی در رنگ های مشکی، قهوه ای و عسلی </span>
+      <span>با سایزبندی متنوع مناسب فضاهای اداری</span>
       <ul>
         <li>
           <div class="item">
-            <img class="bar" src="./assets/images/shoes1.png" alt="" />
+            <img src="./assets/images/shoes1.png" alt="" class="mod-proucts"/>
+            <img src="./assets/images/shoes11.png" alt="" class="dsc-proucts"/>
             <p class="title">کفش رسمی بیرشاد بی بند</p>
             <p class="dessc">کفش رسمی مردانه</p>
           </div>
         </li>
         <li>
           <div class="item">
-            <img class="bar" src="./assets/images/shoes2.png" alt="" />
+            <img src="./assets/images/shoes2.png" alt="" class="mod-proucts"/>
+            <img src="./assets/images/shoes22.png" alt="" class="dsc-proucts"/>
             <p class="title">کفش روزمره مردانه راسو بی بند</p>
             <p class="dessc">کفش روزمره مردانه</p>
           </div>
         </li>
         <li>
           <div class="item">
-            <img class="bar" src="./assets/images/shoes3.png" alt="" />
+            <img src="./assets/images/shoes3.png" alt="" class="mod-proucts"/>
+            <img src="./assets/images/shoes33.png" alt="" class="dsc-proucts"/>
             <p class="title">کفش رسمی بیرشاد بی بند</p>
             <p class="dessc">کفش رسمی مردانه</p>
           </div>
         </li>
         <li>
           <div class="item">
-            <img class="bar" src="./assets/images/shoes4.png" alt="" />
+            <img src="./assets/images/shoes4.png" alt="" class="mod-proucts"/>
+            <img src="./assets/images/shoes44.png" alt="" class="dsc-proucts"/>
             <p class="title">کفش روزمره مردانه راسو بی بند</p>
             <p class="dessc">کفش روزمره مردانه</p>
           </div>
         </li>
+
+        <li>
+          <div class="item products-hidden">
+            <img src="./assets/images/shoes1.png" alt="" class="mod-proucts"/>
+            <img src="./assets/images/shoes11.png" alt="" class="dsc-proucts"/>
+            <p class="title">کفش رسمی بیرشاد بی بند</p>
+            <p class="dessc">کفش رسمی مردانه</p>
+          </div>
+        </li>
+        <li>
+          <div class="item products-hidden">
+            <img src="./assets/images/shoes2.png" alt="" class="mod-proucts"/>
+            <img src="./assets/images/shoes22.png" alt="" class="dsc-proucts"/>
+            <p class="title">کفش روزمره مردانه راسو بی بند</p>
+            <p class="dessc">کفش روزمره مردانه</p>
+          </div>
+        </li>
+        <li>
+          <div class="item products-hidden">
+            <img src="./assets/images/shoes3.png" alt="" class="mod-proucts"/>
+            <img src="./assets/images/shoes33.png" alt="" class="dsc-proucts"/>
+            <p class="title">کفش رسمی بیرشاد بی بند</p>
+            <p class="dessc">کفش رسمی مردانه</p>
+          </div>
+        </li>
+        <li>
+          <div class="item products-hidden">
+            <img src="./assets/images/shoes4.png" alt="" class="mod-proucts"/>
+            <img src="./assets/images/shoes44.png" alt="" class="dsc-proucts"/>
+            <p class="title">کفش روزمره مردانه راسو بی بند</p>
+            <p class="dessc">کفش روزمره مردانه</p>
+          </div>
+        </li>
+
       </ul>
 
       <a class="show-all" href="#" title="مشاهده‌ی همه محصولات">مشاهده‌ی همه محصولات</a>
